--- a/.github/workflows/whatever.yml
+++ b/.github/workflows/whatever.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Lint 🧐
         run: npm run lint
 
-      - name: Build 🏗️
-        run: npm run build
+      # - name: Build 🏗️
+        # run: npm run build
 
       - name: Test 🚨
         run: npm test
