--- a/.github/workflows/whatever.yml
+++ b/.github/workflows/whatever.yml
@@ -13,13 +13,13 @@ jobs:
           persist-credentials: false
 
       - name: Install 🔧
-        run: npm install
+        # run: npm install
 
       - name: Lint 🧐
         run: npm run lint
 
-      # - name: Build 🏗️
-        # run: npm run build
+      - name: Build 🏗️
+        run: npm run build
 
       - name: Test 🚨
         run: npm test
