--- a/.github/workflows/whatever.yml
+++ b/.github/workflows/whatever.yml
@@ -13,7 +13,7 @@ jobs:
           persist-credentials: false
 
       - name: Install 🔧
-        # run: npm install
+        run: npm install
 
       - name: Lint 🧐
         run: npm run lint
